--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # See https:help.github.comignore-files for more about ignoring files.
 
 # compiled output
-dist
-tmp
+**/dist
+**/tmp
 
 # dependencies
-bower_components
-node_modules
+**/bower_components
+**/node_modules
 
 # misc
-.sass-cache
-connect.lock
-coverage
-libpeerconnection.log
-npm-debug.log*
-testem.log
-yarn-error.log
+**/.sass-cache
+**/connect.lock
+**/coverage
+**/libpeerconnection.log
+**/npm-debug.log*
+**/testem.log
+**/yarn-error.log
 
 # ember-try
-.node_modules.ember-try
-bower.json.ember-try
-package.json.ember-try
+**/.node_modules.ember-try
+**/bower.json.ember-try
+**/package.json.ember-try
