--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "qunit-dom": "^0.7.1",
     "sass": "^1.53.0"
   },
+  "resolutions": {
+    "istanbul-api": "^2.1.6"
+  },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
   },
