--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "ember-bootstrap": "^2.6.1",
+    "ember-cli-bootstrap-datetimepicker": "^0.6.1",
+    "ember-power-select": "^2.2.3",
     "ember-qunit": "^3.4.1",
     "ember-svg-jar": "^2.3.3"
   }
