--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "ember-bootstrap": "^2.6.1",
     "ember-cli-bootstrap-datepicker": "^0.6.1",
+    "ember-cp-validations": "^4.0.0-beta.12",
     "ember-power-select": "^2.2.3",
     "ember-qunit": "^3.4.1",
     "ember-svg-jar": "^2.3.3"
