--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ember-cp-validations": "^4.0.0-beta.12",
     "ember-power-select": "^2.2.3",
     "ember-qunit": "^3.4.1",
+    "ember-rollback-relationships": "^1.2.3",
     "ember-svg-jar": "^2.3.3"
   }
 }
